# glengine

./: .gitignore  CMakeLists.txt  TODO  dependencies.sh
include/: audio.hpp  camera2d.hpp  camera3d.hpp  drawable.hpp  event.hpp  font.hpp  glyph.hpp  graphics.hpp  mesh.hpp  model.hpp  pch.hpp  renderTexture.hpp  shader.hpp  sprite.hpp  text.hpp  texture.hpp
res/: Untitled.blend  Untitled.blend1  cubeColor.glb  cubeColorTexture.glb  piramid.glb  stage01.glb
shader/: mesh.fs  mesh.vs  phong.fs  phong.vs  texture.fs  texture.vs
source/: audio.cpp  camera2d.cpp  camera3d.cpp  event.cpp  font.cpp  graphics.cpp  main.cpp  mesh.cpp  model.cpp  renderTexture.cpp  shader.cpp  sprite.cpp  text.cpp  texture.cpp
